Remove all react-native-screens references

--- a/packages/bottom-tabs/package.json
+++ b/packages/bottom-tabs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-navigation/bottom-tabs",
   "description": "Bottom tab navigator following iOS design guidelines",
-  "version": "5.6.1-ad",
+  "version": "5.6.1-ad2",
   "keywords": [
     "react-native-component",
     "react-component",
@@ -55,9 +55,7 @@
   "peerDependencies": {
     "@react-navigation/native": "^5.0.5",
     "react": "*",
-    "react-native": "*",
-    "react-native-safe-area-context": ">= 0.6.0",
-    "react-native-screens": ">= 2.0.0-alpha.0 || >= 2.0.0-beta.0 || >= 2.0.0"
+    "react-native": "*"
   },
   "@react-native-community/bob": {
     "source": "src",
